# pywfn

./: .gitignore  .pypirc  CM0.txt  CM1.txt  CM2.txt  CM3.txt  Cargo.toml  DEVREF.md  MANIFEST.in  PLAN.md  README.en.md  README.md  TODO.md  atmDens_matP.txt  atmDens_wfns.txt  build.rs  buildft.py  buildrs.py  config.json  diary.md  doc.py  engCorr.csv  grid.npy  grid.py  grid_74,100.npy  ifx.txt  log.txt  main.py  memory.json  pack.py  paper.py  pes.cdxml  pyproject.toml  pywfn.xmind  reqs.txt  rsbuild.py  rust-toolchain.toml  setup.py  test.f90  test.ipynb  (+10 more)
.cargo/: config.toml
data/: basis.py  element.csv  elements.py
dens/: H.txt  atmraddens.txt  extra.py  extra.txt  wfnv.py
diarys/: 26.04.28.ipynb  26.04.28.py  26.04.29.ipynb  26.04.29.py  cpts.npy  rfs.npy  vals.npy
docs/: pyo3.md  pywfn.xmind  rust&py.md  功能.xmind  坐标变换证投影.md  基坐标变换.md  开发指南.md  电子积分.md  编译程序.md  轨道重组.md  键级拆分.md
examples/: dirProps.py  lowdin电荷.py  pi键级变化.py  tool.py  分子性质.ipynb  分子性质.py  原子性质.ipynb  原子活性.ipynb  原子活性.py  原子电荷.py  原子电荷与自旋.py  原子能量变化.py  原子轨道能.py  导出cube文件.py  导出文件.py  方向计算.py  旋转数据点.py  电子密度.ipynb  电子密度.py  看芳香性.ipynb  空间性质.ipynb  结构信息.py  绘制势能面.py  获取原子方向.py  计算键级.ipynb  计算键级.py  读取fch文件.py  读取gjf文件.py  读取log文件.py  读取分子能量.py  读取文件.py  键级变化.py  键级颜色映射.py
libft/: flib.f90  march.f90
librs/: datas.rs  integ.rs  lib.rs  march.rs  maths.rs  matrix.rs  pyfns.rs  rlib.rs  space.rs  utils.rs
librs/atomprop/: activity.rs  charge.rs  direction.rs  mod.rs
librs/base/: atom.rs  basis.rs  coefs.rs  geome.rs  mod.rs  mole.rs
librs/bondprop/: direction.rs  mod.rs  order.rs
librs/datas/: btrans.rs
librs/fragprop/: energy.rs  mod.rs
librs/gridprop/: density.rs  dftgrid.rs  mod.rs  potential.rs  wfnfunc.rs
librs/moleprop/: aromacity.rs  mod.rs  newmole.rs  orbital.rs  population.rs
librs/orbtprop/: mod.rs  obtmat.rs  obtval.rs
librs/props/: atom.rs
librs/reader/: fch.rs  gjf.rs  log.rs  mde.rs  mod.rs  mol.rs  non.rs  sdf.rs  xyz.rs
librs/reads/: log.rs
librs/tools/: log.rs
librs/writer/: gjf.rs  mod.rs
libs/: flib.mod
protos/: 25.05.17-电子密度梯度.ipynb  25.06.18-原子静电相互作用.ipynb  25.06.25-原子间静电相互作用.py  25.06.26-原子自旋分布.py  25.10.09-成键研究.ipynb  25.10.14-D轨道电子.ipynb  25.10.17-pi电子空间.ipynb  25.10.29-d轨道旋转不变验证.ipynb  25.11.08-基函数壳层.ipynb  25.11.10-deco键级扫描.ipynb  25.11.22-球内pi电子密度.ipynb  25.12.18-鹏笼内电子数量.ipynb  25.4.7-AIM分析.ipynb  25.4.7-轨道投影.ipynb  25.5.17-分子轨道重叠.ipynb  25.6.25-片段间静电相互作用.py  AIM分析.ipynb  C20.txt  CM0.txt  CM1.txt  CM2.txt  CM3.txt  Flebedev.py  README.md  lebdev.f90  lebdev.mod  protos.7z  sympy学习.ipynb  函数求导.ipynb  分子电势.ipynb  分子芳香性.ipynb  地图映射.ipynb  基底变换.ipynb  密度梯度.ipynb  平面投影.ipynb  拉格朗日插值.py  提取等值面.py  数据.xlsx  文件读取.ipynb  方向福井函数.py  (+11 more)
pywfn/: README.md  __init__.py  chemProp.py  chems.py  cli.py  config.py  consts.py  define.py  editor.py  integ.py  march.py  shell.py  utils.py
pywfn/atomprop/: README.md  __init__.py  activity.py  atomCharge.py  atomDirect.py  atomEnergy.py  atomSpin.py  charge.py  delProps.py  dirProps.py  directElectron.py  directProject.py  directSpin.py  direction.py  energy.py  freeValence.py  lutils.py  mullikenCharge.py  mullikenSpin.py  piElectron.py  piProps.py  spin.py
pywfn/base/: README.md  __init__.py  atom.py  basis.py  bond.py  coefs.py  geome.py  mol.py  mole.py
pywfn/bondorder/: __init__.py  hmo.py  lutils.py  mayer.py  piDH.py  piDM.py  piSH.py  piSM.py
pywfn/bondprop/: README.md  __init__.py  bondOrder.py  direction.py  hmo.py  lutils.py  mayer.py  order.py  piDH.py  piDM.py  piSH.py  piSM.py  selectPI.py
pywfn/data/: __init__.py  basis.py  bastrans.py  consts.py  element.csv  elements.py  grid_74,80.npy  lebdev.py  lebedev.py  march.json  radDens.py  sphGrid.py  temps.py
pywfn/datas/: btrans.py  elements.py  lebedev.py  rstoot.py
pywfn/fragprop/: energy.py
pywfn/gridprop/: README.md  __init__.py  density.py  dftgrid.py  hmowfn.py  lutils.py  potential.py  wfnfunc.py
pywfn/libs/: README.md  data.f90  flib.f90  flib.mod  march.f90  rlib.pyd
pywfn/maths/: README.md  __init__.py  atom.py  flib.f90  flib.mod  flib.py  gto.py  integ.py  march.py  mol.py  rlib.pyd  rlib.pyi  unit.py
pywfn/moleprop/: README.md  __init__.py  aromacity.py  aromatic.py  energy.py  newmole.py  orbital.py  properties.py
pywfn/molprop/: __init__.py  aromatic.py  (+4 more)
src_rs/: integ.rs  lib.rs  matrix.rs  space.rs  utils.rs
tests/: test_atomprop.py  test_bondprop.py  test_reader.py  test_writer.py  测试各种工具.py  读取各种文件.py
tutori/: README.md  分子性质.ipynb  分子性质.md  原子性质.ipynb  原子性质.md  原子性质.py  实用工具.ipynb  实用工具.md  文件读取.ipynb  文件读取.md  空间性质.ipynb  设计理念.ipynb  设计理念.md  键の性质.ipynb  键の性质.md
(+192 files in other folders)
