[package]
name = "wfn-core"
version = "0.1.0"
edition = "2021"


[lib]
path = "librs/rlib.rs"
name = "rlib"
crate-type = ["cdylib", "lib"]

[dependencies]
rayon = "1.5.1"
lazy_static = "1.4.0"
numpy = "0.25.0"
ndarray = "0.16"
ndarray-linalg = { version = "0.17.0", features = ["intel-mkl-static"] }
regex = "1.11.1"
textwrap = "0.16.2"

[dependencies.pyo3]
version = "0.25.1"
features = ["extension-module"]
