[package]
name = "core"
version = "0.1.0"
edition = "2021"


[lib]
path = "librs/lib.rs"
name = "core"
crate-type = ["cdylib", "lib"]

[dependencies]
rayon = "1.5.1"
rswfn = { path = "d:/code/rswfn" }
pyo3 = { version = "0.25.1", features = ["extension-module"] }
ndarray = "0.16.1"
numpy = "0.25.0"
nalgebra = "0.33.2"

[profile.release]
lto = true
opt-level = 3
strip = true      # Ensures debug symbols are removed.
codegen-units = 1
panic = "abort"   # Higher performance by disabling panic handlers.
