[package]
name = "pywfn"
version = "0.1.0"
edition = "2021"


[lib]
path = "src_rs/lib.rs"
name = "_core"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.12.0"
numpy = "0.28.0"
ndarray = "0.16.1"
rswfn = { path = "e:/code/rswfn" }
pyo3 = { version = "0.28.3", features = [
    "extension-module",
    "abi3-py310",
    # "experimental-inspect",
] }


[profile.release]
lto = true
opt-level = 3
strip = true      # Ensures debug symbols are removed.
codegen-units = 1
panic = "abort"   # Higher performance by disabling panic handlers.
