[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pywfn"
version = "1.0.7"
authors = [
  { name="shixiaofei", email="1103275712@qq.com" },
]
description = "A python package for wave function analysis"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Fortran",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["chemistry", "wave function"]
dependencies = [
    "numpy>=2.2.3",
    "rich>=13.9.4",
    "matplotlib>=3.10.1"
]
[project.scripts]
pywfn = "pywfn:main"

[project.urls]
Homepage = "https://github.com/qmlCoder/pywfn"
Issues = "https://github.com/qmlCoder/pywfn/issues"

[tool.hatch.build.targets.sdist]
include = [
    "pywfn/**/*.py",      # 包含所有 Python 文件
]
# artifacts = [
#     "pywfn/maths/*.pyd",
#     "pywfn/maths/*.so",
#     "pywfn/maths/*.dll"
# ]

[tool.hatch.build.targets.wheel]
packages=["pywfn"]
artifacts = [
    "pywfn/maths/*.pyd",
    "pywfn/maths/*.so",
    "pywfn/maths/*.dll"
]