[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pywfn"
version = "1.0.8"
authors = [{ name = "shixiaofei", email = "1103275712@qq.com" }]
description = "A python package for wave function analysis"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["chemistry", "wave function"]
dependencies = ["numpy>=2.2.3"]
[project.scripts]
pywfn = "pywfn:main"

[project.urls]
Homepage = "https://github.com/qmlCoder/pywfn"
Issues = "https://github.com/qmlCoder/pywfn/issues"

[tool.maturin]
# python-source = "pywfn"
module-name = "pywfn.core"
